solucion de imagenes
simplemente se escribio .webp en vez de .png o jpg

--- a/index.html
+++ b/index.html
@@ -249,67 +249,67 @@
           <div id="contenido-objetos-catalogo">
             <div class="divs-catalogo" data-marcaCatalogo="apple">
               <img
-                src="img/marcas/AppleM.jpg"
+                src="img/marcas/AppleM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="samsung">
               <img
-                src="img/marcas/logoSam.png"
+                src="img/marcas/logoSam.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="sony">
-              <img src="img/marcas/SonyM.jpg" alt="" class="imagen-marca-div" />
+              <img src="img/marcas/SonyM.webp" alt="" class="imagen-marca-div" />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="google">
               <img
-                src="img/marcas/GoogleM.jpg"
+                src="img/marcas/GoogleM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="htc">
-              <img src="img/marcas/HTCM.jpg" alt="" class="imagen-marca-div" />
+              <img src="img/marcas/HTCM.webp" alt="" class="imagen-marca-div" />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="huawei">
               <img
-                src="img/marcas/HuaweiM.jpg"
+                src="img/marcas/HuaweiM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="lenovo">
               <img
-                src="img/marcas/LenovoM.jpg"
+                src="img/marcas/LenovoM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="lg">
-              <img src="img/marcas/LGM.jpg" alt="" class="imagen-marca-div" />
+              <img src="img/marcas/LGM.webp" alt="" class="imagen-marca-div" />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="motorola">
               <img
-                src="img/marcas/MotorolaM.jpg"
+                src="img/marcas/MotorolaM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="zte">
-              <img src="img/marcas/ZTEM.jpg" alt="" class="imagen-marca-div" />
+              <img src="img/marcas/ZTEM.webp" alt="" class="imagen-marca-div" />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="alcatel">
               <img
-                src="img/marcas/AlcatelM.jpg"
+                src="img/marcas/AlcatelM.webp"
                 alt=""
                 class="imagen-marca-div"
               />
             </div>
             <div class="divs-catalogo" data-marcaCatalogo="oppo">
-              <img src="img/marcas/OppoM.jpg" alt="" class="imagen-marca-div" />
+              <img src="img/marcas/OppoM.webp" alt="" class="imagen-marca-div" />
             </div>
             <div class="margen-final-abajo"></div>
           </div>
@@ -333,42 +333,42 @@
               <div id="contenedor-apps-celular">
                 <a href="#" class="link-contacto">
                   <img
-                    src="img/IconsApps/facebook.png"
+                    src="img/IconsApps/facebook.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
                 </a>
                 <a href="#" class="link-contacto">
                   <img
-                    src="img/IconsApps/instagram.png"
+                    src="img/IconsApps/instagram.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
                 </a>
                 <a href="#" class="link-contacto link-aplastado">
                   <img
-                    src="img/IconsApps/gmail.png"
+                    src="img/IconsApps/gmail.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
                 </a>
                 <a href="#" class="link-contacto">
                   <img
-                    src="img/IconsApps/whatssap.png"
+                    src="img/IconsApps/whatssap.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
                 </a>
                 <a href="#" class="link-contacto">
                   <img
-                    src="img/IconsApps/tik tok.png"
+                    src="img/IconsApps/tik tok.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
                 </a>
                 <a href="#" class="link-contacto link-aplastado">
                   <img
-                    src="img/IconsApps/youtube.png"
+                    src="img/IconsApps/youtube.webp"
                     alt=""
                     class="icon-apps-celular"
                   />
@@ -394,37 +394,37 @@
             <div id="contenedor-apps-celular-responsive">
               <a href="#"
                 ><img
-                  src="img/IconsApps/facebook.png"
+                  src="img/IconsApps/facebook.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
               <a href="#"
                 ><img
-                  src="img/IconsApps/instagram.png"
+                  src="img/IconsApps/instagram.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
               <a href="#"
                 ><img
-                  src="img/IconsApps/gmail.png"
+                  src="img/IconsApps/gmail.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
               <a href="#"
                 ><img
-                  src="img/IconsApps/whatssap.png"
+                  src="img/IconsApps/whatssap.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
               <a href="#"
                 ><img
-                  src="img/IconsApps/tik tok.png"
+                  src="img/IconsApps/tik tok.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
               <a href="#"
                 ><img
-                  src="img/IconsApps/youtube.png"
+                  src="img/IconsApps/youtube.webp"
                   alt=""
                   class="icon-apps-celular"
               /></a>
